--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -3,31 +3,35 @@
     {% if page.videos.smooth %}
     <div class="__video --smooth" data-video-name="smooth">
       <div id="background-video-player-smooth"></div>
-      <div class="__overlay --white-fade"></div>
+      <div class="__overlay overlay --white-fade"></div>
     </div>
     {% endif %} {% if page.videos.rough %}
     <div class="__video --rough" data-video-name="rough">
       <div id="background-video-player-rough"></div>
-      <div class="__overlay --feathered-gray-blue"></div>
-      <div class="__overlay --dark-blue"></div>
-      <div class="__overlay --dark-blue-inv"></div>
+      <div class="__overlay overlay --feathered-gray-blue"></div>
+      <div class="__overlay overlay --dark-blue"></div>
+      <div class="__overlay overlay --dark-blue-inv"></div>
     </div>
     {% endif %} {% if page.videos.flowing %}
     <div class="__video --flowing" data-video-name="flowing">
       <div id="background-video-player-flowing"></div>
-      <div class="__overlay --white-fade"></div>
-      <div class="__overlay --gray-blue"></div>
-      <div class="__overlay --blue-blue"></div>
-      <div class="__overlay --dark-blue"></div>
-      <div class="__overlay --dark-blue-inv"></div>
+      <div class="__overlay overlay --white-fade"></div>
+      <div class="__overlay overlay --gray-blue"></div>
+      <div class="__overlay overlay --blue-blue"></div>
+      <div class="__overlay overlay --dark-blue"></div>
+      <div class="__overlay overlay --dark-blue-inv"></div>
     </div>
     {% endif %} {% if page.videos.creek %}
     <div class="__video --creek" data-video-name="creek">
       <div id="background-video-player-creek"></div>
-      <div class="__overlay --creek"></div>
+      <div class="__overlay overlay --creek"></div>
+      <div class="__overlay overlay --riverbank"></div>
+      <div class="__overlay overlay --streams"></div>
     </div>
     {% endif %}
   </div>
 
-  {% include line_drawings.html %}
+  {% if page.lineDrawing %}
+    {% include line_drawings.html %}
+  {% endif %}
 </div>
