Header tweaks, riverbank+streams get correct icons + images.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,51 +9,51 @@
     <div class="__link-container">
       <a href="javascript:void" title="Platform" class="__link l1">Platform</a>
       <ul class="__sublinks">
-        <li><a class="l1" href="javascript:void">Data Exchange</li>
-        <li><a class="l1" href="javascript:void">Data Integrity</li>
+        <li><a class="l1" href="javascript:void">Data Exchange</a></li>
+        <li><a class="l1" href="javascript:void">Data Integrity</a></li>
       </ul>
     </div>
 
     <div class="__link-container">
       <a href="javascript:void" title="Products" class="__link l1">Products</a>
       <ul class="__sublinks">
-        <li><a class="l1" href="javascript:void">Monetization</li>
-        <li><a class="l1" href="javascript:void">Discovery</li>
+        <li><a class="l1" href="javascript:void">Monetization</a></li>
+        <li><a class="l1" href="javascript:void">Discovery</a></li>
       </ul>
     </div>
 
     <div class="__link-container">
       <a href="javascript:void" title="Services" class="__link l1">Services</a>
       <ul class="__sublinks">
-        <li><a class="l1" href="javascript:void">Compliance</li>
-        <li><a class="l1" href="javascript:void">App Development</li>
+        <li><a class="l1" href="javascript:void">Compliance</a></li>
+        <li><a class="l1" href="javascript:void">App Development</a></li>
       </ul>
     </div>
 
     <div class="__link-container">
       <a href="javascript:void" title="About" class="__link l1">About</a>
       <ul class="__sublinks">
-        <li><a class="l1" href="javascript:void">Press</li>
-        <li><a class="l1" href="javascript:void">Legal</li>
-        <li><a class="l1" href="javascript:void">Team</li>
+        <li><a class="l1" href="javascript:void">Press</a></li>
+        <li><a class="l1" href="javascript:void">Legal</a></li>
+        <li><a class="l1" href="javascript:void">Team</a></li>
       </ul>
     </div>
   </div>
   <div class="__page-links">
-    <a
-      href="{{ site.baseurl }}{% link riverbank.html %}"
-      title="Riverbank"
-      class="__link l1 --gray-fill __page-link"
-      >R</a
-    >
-    <a
-      href="{{ site.baseurl }}{% link streams.html %}"
-      title="StreamS"
-      class="__link l1 --gray-fill __page-link"
-      >S</a
-    >
-  </div>
-  <div class="__sign-up">
+    <div class="__pages">
+      <a
+        href="{{ site.baseurl }}{% link riverbank.html %}"
+        title="Riverbank"
+        class="__link l1 __page-link"
+        ><img src="{{ site.baseurl }}/assets/img/riverbank.png" alt="Riverbank" /></a
+      >
+      <a
+        href="{{ site.baseurl }}{% link streams.html %}"
+        title="StreamS"
+        class="__link l1 __page-link"
+        ><img src="{{ site.baseurl }}/assets/img/streams.png" alt="StreamS" /></a
+      >
+    </div>
     <a href="javascript:void" title="Sign Up" class="__link button --sign-up"
       >Sign Up</a
     >
