--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -166,7 +166,7 @@ body {
 
   .__links {
     display: flex;
-    flex-basis: 40%;
+    flex-basis: 45%;
     flex-grow: 2;
     justify-content: space-between;
 
@@ -204,18 +204,23 @@ body {
   .__page-links {
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-around;
-    flex-basis: 20%;
-    margin-top: 12vh;
-  }
-
-  .__sign-up {
-    display: flex;
     justify-content: flex-end;
-    flex-basis: 10%;
+    align-items: center;
+    flex-basis: 30%;
+    
+    .__pages {
+      margin: 0 2vw 0 0;
+      display: flex;
+      flex-flow: row nowrap;
+    }
 
-    .__link {
-      flex-shrink: 0;
+    img {
+      width: 3em;
+      height: 3em;
+    }
+
+    .__link.--sign-up {
+      min-height: 2em;
     }
   }
 }
