Updated layouts for Riverbank/StreamS

--- a/_sass/overlays.scss
+++ b/_sass/overlays.scss
@@ -71,9 +71,14 @@
     }
 
     &.--riverbank {
+      // background-image: linear-gradient(
+      //   rgba(16, 38, 83, 0.8),
+      //   rgba(35, 64, 104, 0.6)
+      // );
       background-image: linear-gradient(
-        rgba(16, 38, 83, 0.8),
-        rgba(35, 64, 104, 0.6)
+        rgba(111, 143, 175, 0.5),
+        rgba(111, 143, 175, 0.7) 60%,
+        rgba(111, 143, 175, 0.8) 80%
       );
     }
 
