--- a/_sass/overlays.scss
+++ b/_sass/overlays.scss
@@ -71,10 +71,6 @@
     }
 
     &.--riverbank {
-      // background-image: linear-gradient(
-      //   rgba(16, 38, 83, 0.8),
-      //   rgba(35, 64, 104, 0.6)
-      // );
       background-image: linear-gradient(
         rgba(111, 143, 175, 0.5),
         rgba(111, 143, 175, 0.7) 60%,
@@ -84,10 +80,9 @@
 
     &.--streams {
       background-image: linear-gradient(
-        rgba(17, 44, 106, 1) 20%,
-        rgba(17, 44, 106, 0.8) 40%,
-        rgba(35, 70, 104, 0.7) 90%,
-        rgba(35, 70, 104, 0.1)
+        rgba(111, 143, 175, 0.5),
+        rgba(14, 43, 104, 0.8) 60%,
+        rgba(14, 43, 104, 0.9) 80%,
       );
     }
 }
