More RiverBank updates. Drop new video file in, change gradient, update "gallery" position

--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -25,8 +25,12 @@
     <div class="__video --creek" data-video-name="creek">
       <div id="background-video-player-creek"></div>
       <div class="__overlay overlay --creek"></div>
-      <div class="__overlay overlay --riverbank"></div>
       <div class="__overlay overlay --streams"></div>
+    </div>
+    {% endif %} {% if page.videos.jungle %}
+    <div class="__video --jungle" data-video-name="jungle">
+      <div id="background-video-player-jungle"></div>
+      <div class="__overlay overlay --riverbank"></div>
     </div>
     {% endif %}
   </div>
