--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -421,6 +421,11 @@ body {
     opacity: 0;
     transform: translate(0%, 100%);
   }
+
+  &.--hidden-left {
+    opacity: 0;
+    transform: translate(-200%, 0);
+  }
 }
 
 .style-guide {
