update header links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,8 +17,8 @@
     <div class="__link-container">
       <a href="javascript:void" title="Products" class="__link l1">Products</a>
       <ul class="__sublinks">
-        <li><a class="l1" href="javascript:void">Riverbank</a></li>
-        <li><a class="l1" href="javascript:void">Streams</a></li>
+        <li><a class="l1" href="javascript:void">Social</a></li>
+        <li><a class="l1" href="javascript:void">Discovery</a></li>
         <li><a class="l1" href="javascript:void">Monetization</a></li>
       </ul>
     </div>
@@ -26,9 +26,9 @@
     <div class="__link-container">
       <a href="javascript:void" title="Services" class="__link l1">Services</a>
       <ul class="__sublinks">
-        <li><a class="l1" href="javascript:void">App Development</a></li>
         <li><a class="l1" href="javascript:void">Compliance</a></li>
         <li><a class="l1" href="javascript:void">Data Insights</a></li>
+        <li><a class="l1" href="javascript:void">App Development</a></li>
       </ul>
     </div>
 
