Slide 4 color tweaks

--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -8,6 +8,7 @@
       <div class="__overlay overlay --blue-blue"></div>
       <div class="__overlay overlay --dark-blue"></div>
       <div class="__overlay overlay --dark-blue-inv"></div>
+      <div class="__overlay overlay --your-data-belongs-to-you"></div>
     </div>
     {% endif %} {% if page.videos.smooth %}
     <div class="__video --smooth" data-video-name="smooth">
