--- a/_sass/sections.scss
+++ b/_sass/sections.scss
@@ -77,7 +77,7 @@ html[data-section="your-data-belongs-to-you"] {
   background-color: var(--blue-dark);
 
   .background-video-container {
-    .__overlay.--blue-blue {
+    .__overlay.--your-data-belongs-to-you {
       opacity: 1;
     }
   }
