Sequences thru slide 6

--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -4,6 +4,7 @@
   --gray-dark: #3f3f3f;
   --gray404040: #404040;
   --gray-beast: #666666;
+  --gray-8e: #8e8e8e;
   --gray-medium: #999999;
   --gray-light: #b2b2b2;
   --yellow: #edfb8b;
