--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -9,6 +9,8 @@
       <div class="__overlay overlay --dark-blue"></div>
       <div class="__overlay overlay --dark-blue-inv"></div>
       <div class="__overlay overlay --your-data-belongs-to-you"></div>
+      <div class="__overlay overlay --if-the-service-is-free"></div>
+      <div class="__overlay overlay --a-privacy-platform-youll-want-to-use"></div>
     </div>
     {% endif %} {% if page.videos.smooth %}
     <div class="__video --smooth" data-video-name="smooth">
