--- a/_sass/sections.scss
+++ b/_sass/sections.scss
@@ -289,7 +289,7 @@ html[data-section="home-how-does-river-work"] {
   background-color: var(--blue-dark);
 
   .background-video-container {
-    .__overlay.--dark-blue {
+    .__overlay.--the-business-of-river {
       opacity: 1;
     }
   }
@@ -321,7 +321,7 @@ html[data-section="home-business-of-data"] {
   background-color: var(--blue-dark);
 
   .background-video-container {
-    .__overlay.--dark-blue-inv {
+    .__overlay.--the-business-of-data {
       opacity: 1;
     }
   }
