line drawing 1 variant

--- a/_includes/line_drawings.html
+++ b/_includes/line_drawings.html
@@ -1,5 +1,8 @@
 <div class="__line-drawing svg-line-drawing">
   <div class="__scrib">{% include scrib.svg %}</div>
+  <div class="__scrib-2">{% include scrib.svg %}</div>
   <div class="__scrib1">{% include scrib1.svg %}</div>
+  <div class="__scrib1-2">{% include scrib1.svg %}</div>
   <div class="__scrib2">{% include scrib2.svg %}</div>
+  <div class="__scrib2-2">{% include scrib2.svg %}</div>
 </div>
